--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
+    "compromise": "^14.3.1",
     "framer-motion": "^6.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
